avances diseño y m queries

--- a/pages/casos.html
+++ b/pages/casos.html
@@ -16,6 +16,8 @@
     <header>
         <img src="../img/logo.jpg" class="logo" alt="logo">
         <p>PSICOTÓPICOS</p>
+        <label for="menu-hamburguesa" class="menu-icon">☰</label>
+        <input type="checkbox" id="menu-hamburguesa" class="menu-hamburguesa-checkbox" />
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -113,7 +115,7 @@
     </main>
     <footer>
         <a href="https://cohersion.blogspot.com/?m=1" target="_blank"><i class="bi bi-journals"></i>
-                </a>
+        </a>
         <a href="https://www.instagram.com/odayrapsodia/" target="_blank"><i class="bi bi-instagram"></i></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
