modificacion rutas img

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,36 +86,36 @@
                     <h3>
                         Profesional X
                     </h3>
-                    <img src="/img/profesional-x.jpg" alt="profesional-x">
+                    <img src="../img/profesional-x.jpg" alt="profesional-x">
                     <p>
                         Matrícula Nº12345
                     </p>
                     <p>
-                        <img src="/img/wp-logo.jpg" alt="wp-logo">1100112233
+                        <img src="../img/wp-logo.jpg" alt="wp-logo">1100112233
                     </p>
                 </div>
                 <div class="tarjeta-psi">
                     <h3>
                         Profesonal Y
                     </h3>
-                    <img src="/img/profesional-y.jpg" alt="profesional-y">
+                    <img src="../img/profesional-y.jpg" alt="profesional-y">
                     <p>
                         Matrícula Nº54321
                     </p>
                     <p>
-                        <img src="/img/wp-logo.jpg" alt="">1144556677
+                        <img src="../img/wp-logo.jpg" alt="">1144556677
                     </p>
                 </div>
                 <div class="tarjeta-psi">
                     <h3>
                         Profesional Z
                     </h3>
-                    <img src="/img/profesional-z.jpg" alt="profesional-z">
+                    <img src="../img/profesional-z.jpg" alt="profesional-z">
                     <p>
                         Matrícula Nº09876
                     </p>
                     <p>
-                        <img src="/img/wp-logo.jpg" alt="">1188990011
+                        <img src="../img/wp-logo.jpg" alt="">1188990011
                     </p>
                 </div>
             </div>
