--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!--Bootstrap Iconos-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!--Magic Animations-->
+    <link rel="stylesheet" href="css/magic.min.css">
     <!--CSS-->
     <link rel="stylesheet" href="css/estilos.css">
     <title>Psicotópicos</title>
 </head>
-
 <body>
     <header>
-        <img src="./img/logo.jpg" class="logo" alt="logo">
+        <img src="./img/logo.png" class="logo magictime puffIn" alt="logo">
         <p>PSICOTÓPICOS</p>
         <label for="menu-hamburguesa" class="menu-icon">☰</label>
         <input type="checkbox" id="menu-hamburguesa" class="menu-hamburguesa-checkbox" />
@@ -83,58 +84,53 @@
         </section>
         <section class="casos">
             <h2>Casos reales</h2>
-            <div class="contenedor-casos">
-                <div class="bloque-casos-catarsis">
-                    <h3>Conocé casos reales o compartinos el tuyo</h3>
-                    <div id="carouselExampleCaptions" class="carousel slide">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <a href="./pages/casos.html#caso-ansiedad" target="_blank"><img src="./img/portada-caso-ansiedad.jpg" class="d-block w-100" alt="portada-caso-ansiedad"></a>
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Ansiedad</h5>
-                                    <p>Federico nos cuenta cómo atravesó <br> sus episodios de ansiedad y ataques de pánico.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="./pages/casos.html#caso-depresion" target="_blank"><img src="./img/portada-casos-depresion.jpg" class="d-block w-100" alt="portada-casos-depresion"></a>
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Depresión</h5>
-                                    <p>Leslie y Noelia comparten sus etapas viviendo con depresión.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="./pages/casos.html#caso-fobia" target="_blank"><img src="./img/portada-caso-fobia.jpg" class="d-block w-100" alt="portada-caso-fobia"></a>
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Fobia</h5>
-                                    <p>Celia habla sobre cómo es vivir con un tipo de fobia específica: la agorafobia.</p>
-                                </div>
+            <div class="bloque-casos-catarsis">
+                <h3>Conocé casos reales o compartinos el tuyo</h3>
+                <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <a href="./pages/casos.html#caso-ansiedad" target="_blank"><img src="./img/portada-caso-ansiedad.jpg" class="d-block w-100" alt="portada-caso-ansiedad"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Ansiedad</h5>
+                                <p>Federico nos cuenta cómo atravesó <br> sus episodios de ansiedad y ataques de pánico.</p>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                        <div class="carousel-item">
+                            <a href="./pages/casos.html#caso-depresion" target="_blank"><img src="./img/portada-casos-depresion.jpg" class="d-block w-100" alt="portada-casos-depresion"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Depresión</h5>
+                                <p>Leslie y Noelia comparten sus etapas viviendo con depresión.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="./pages/casos.html#caso-fobia" target="_blank"><img src="./img/portada-caso-fobia.jpg" class="d-block w-100" alt="portada-caso-fobia"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Fobia</h5>
+                                <p>Celia habla sobre cómo es vivir con un tipo de fobia específica: la agorafobia.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="boton">
-                        <a href="./pages/casos.html#testimonios">Hacé catársis</a>
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="contenedor-video">
-                    <iframe class="video" src="https://www.youtube.com/embed/x44EQym4Xpo?autoplay=1&mute=1" title="TODOS LOS SÍNTOMAS DE LA ANSIEDAD EXPLICADOS (FÍSICOS Y PSICOLÓGICOS)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="boton">
+                    <a href="./pages/casos.html#testimonios">Hacé catársis</a>
                 </div>
             </div>
         </section>
