--- a/pages/casos.html
+++ b/pages/casos.html
@@ -8,13 +8,15 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!--Bootstrap Iconos-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!--Magic Animations-->
+    <link rel="stylesheet" href="css/magic.min.css">
     <!--CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Casos</title>
 </head>
 <body>
     <header>
-        <img src="../img/logo.jpg" class="logo" alt="logo">
+        <img src="../img/logo.png" class="logo" alt="logo">
         <p>PSICOTÓPICOS</p>
         <label for="menu-hamburguesa" class="menu-icon">☰</label>
         <input type="checkbox" id="menu-hamburguesa" class="menu-hamburguesa-checkbox" />
