nuevos cambios de estilo

--- a/index.html
+++ b/index.html
@@ -48,34 +48,53 @@
             <div class="contenedor-general">
                 <div class="contenedor-tarjetas">
                     <div class="tarjeta-concepto">
-                        <h3>
-                            Ansiedad
-                        </h3>
-                        <p>
-                            Esa sensación de que algo anda mal, pero no sabés qué. <br> Spoiler: no sos vos, es tu
-                            amígdala...</p>
-                        <a href="./pages/topicos.html#ansiedad">Ver Más...</a>
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-front">
+                                <img src="/img/ansiedad.jpg" alt="ansiedad-front">
+                            </div>
+                            <div class="tarjeta-back">
+                                <h3>
+                                    Ansiedad
+                                </h3>
+                                <p>
+                                    Esa sensación de que algo anda mal, pero no sabés qué. <br> Spoiler: no sos vos, es tu
+                                    amígdala...</p>
+                                <a href="./pages/topicos.html#ansiedad">Ver Más...</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="tarjeta-concepto">
-                        <h3>
-                            Depresión
-                        </h3>
-                        <p>
-                            La depresión es como estar en modo avión. <br> No es estar triste "porque sí", <br> ni algo
-                            que se arregla con un "pensá en positivo" <br> o "hacé ejercicio". Es un apagón interno...
-                        </p>
-                        <a href="./pages/topicos.html#depresion">Ver Más...</a>
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-front">
+                                <img src="/img/depresion.jpg" alt="depresión-front">
+                            </div>
+                            <div class="tarjeta-back">
+                                <h3>
+                                    Depresión
+                                </h3>
+                                <p>
+                                    La depresión es como estar en modo avión. <br> No es estar triste "porque sí", <br> ni algo
+                                    que se arregla con un "pensá en positivo" <br> o "hacé ejercicio". Es un apagón interno...</p>
+                                <a href="./pages/topicos.html#depresion">Ver Más...</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="tarjeta-concepto">
-                        <h3>
-                            Obsesión
-                        </h3>
-                        <p>
-                            Es cuando tu mente agarra una idea random —o no tan random— <br> y le da replay sin parar.
-                            <br> No lo elegís, no lo querés, <br> y aunque sabés que no tiene sentido… ahí está.
-                            Pegada...
-                        </p>
-                        <a href="./pages/topicos.html#obsesion">Ver Más...</a>
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-front">
+                                <img src="/img/obsesion.jpg" alt="obsesion-front">
+                            </div>
+                            <div class="tarjeta-back">
+                                <h3>
+                                    Obsesión
+                                </h3>
+                                <p>
+                                    Es cuando tu mente agarra una idea random —o no tan random— <br> y le da replay sin parar.
+                                    <br> No lo elegís, no lo querés, <br> y aunque sabés que no tiene sentido… ahí está.
+                                    Pegada...</p>
+                                <a href="./pages/topicos.html#obsesion">Ver Más...</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="boton">
