correción de rutas

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="tarjeta-concepto">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-front">
-                                <img src="/img/ansiedad.jpg" alt="ansiedad-front">
+                                <img src="./img/ansiedad.jpg" alt="ansiedad-front">
                             </div>
                             <div class="tarjeta-back">
                                 <h3>
@@ -66,7 +66,7 @@
                     <div class="tarjeta-concepto">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-front">
-                                <img src="/img/depresion.jpg" alt="depresión-front">
+                                <img src="./img/depresion.jpg" alt="depresión-front">
                             </div>
                             <div class="tarjeta-back">
                                 <h3>
@@ -82,7 +82,7 @@
                     <div class="tarjeta-concepto">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-front">
-                                <img src="/img/obsesion.jpg" alt="obsesion-front">
+                                <img src="./img/obsesion.jpg" alt="obsesion-front">
                             </div>
                             <div class="tarjeta-back">
                                 <h3>
