--- a/pages/casos.html
+++ b/pages/casos.html
@@ -107,7 +107,7 @@
                 Podés ayudar a otros en tu misma situación a entenderse mejor y saber que no estan solos. <br> También si pudiste mejorar haciendo algún tratamiento y còmo lo afrontas en el día a día. <br>
                 Tu testimonio es muy importante y puede ser clave para otra persona que está desorientada o necesita ayuda.
             </p>
-            <form action="/topicos.html" method="post" class="formulario">
+            <form action="https://formsubmit.co/vero.sl.rd%40gmail.com" method="post" class="formulario">
                 <label for="alias">Alias:</label>
                 <input class="input" type="text" name="alias" id="alias">
                 <label for="testimonio">Expresate:</label>
