--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
             <h2>
                 Ingresá tus datos y dejanos tus dudas o consultas.
             </h2>
-            <form action="/submit" method="post">
+            <form action="https://formsubmit.co/vero.sl.rd%40gmail.com" method="post">
                 <div class="form-item">
                     <label for="nombre">Nombre:</label>
                     <input class="input" type="text" name="nombre" id="nombre">
