funcionalidades y media queries

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="boton">
-                    <a href="./pages/topicos.html#lista-topicos">Tòpicos de la A a la Z</a>
+                    <a href="./pages/topicos.html#lista-topicos">Tópicos de la A a la Z</a>
                 </div>
             </div>
         </section>
