--- a/pages/casos.html
+++ b/pages/casos.html
@@ -9,7 +9,7 @@
     <!--Bootstrap Iconos-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!--Animaciones-->
-    <link rel="stylesheet" href="css/magic.min.css">
+    <link rel="stylesheet" href="../css/magic.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <!--CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" class="logo" alt="logo">
+        <img src="../img/logo.png" class="logo magictime puffIn" alt="logo">
         <p>PSICOTÓPICOS</p>
         <label for="menu-hamburguesa" class="menu-icon">☰</label>
         <input type="checkbox" id="menu-hamburguesa" class="menu-hamburguesa-checkbox" />
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                     <article class="videos-casos">
-                        <iframe width="587" height="330" src="https://www.youtube.com/embed/2kUqVkYGI48" title="Así superé los Ataques de Pánico y de Ansiedad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/2kUqVkYGI48" title="Así superé los Ataques de Pánico y de Ansiedad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                     <article class="videos-casos">
-                        <iframe width="587" height="330" src="https://www.youtube.com/embed/yJ-gwnxWYb4" title="Hablemos de DEPRESIÓN : Sin Miedo y Sin Filtro | AZOTERAPIA PODCAST SHOW | EP07" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/yJ-gwnxWYb4" title="Hablemos de DEPRESIÓN : Sin Miedo y Sin Filtro | AZOTERAPIA PODCAST SHOW | EP07" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         </p>
                     </div>
                     <article class="videos-casos">
-                        <iframe width="587" height="330" src="https://www.youtube.com/embed/1jSs4Gqqw0I" title="VIVIR CON AGORAFOBIA (miedo extremo a los espacios públicos)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/1jSs4Gqqw0I" title="VIVIR CON AGORAFOBIA (miedo extremo a los espacios públicos)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
             </div>
