--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <!--Bootstrap Iconos-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!--Animaciones-->
-    <link rel="stylesheet" href="css/magic.min.css">
+    <link rel="stylesheet" href="../css/magic.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <!--CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" class="logo" alt="logo">
+        <img src="../img/logo.png" class="logo magictime puffIn" alt="logo">
         <p>PSICOTÓPICOS</p>
         <label for="menu-hamburguesa" class="menu-icon">☰</label>
         <input type="checkbox" id="menu-hamburguesa" class="menu-hamburguesa-checkbox" />
