correción de responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -84,7 +84,7 @@
                 y encarar una posible terapia o tratamiento según tu necesidad.
             </p>
             <div class="contenedor-tarjetas-psi">
-                <div class="tarjeta-psi" data-aos="zoom-out-right" data-aos-duration="1000">
+                <div class="tarjeta-psi" data-aos="zoom-out" data-aos-duration="1000">
                     <h3>
                         Profesional X
                     </h3>
@@ -108,7 +108,7 @@
                         <i class="bi bi-whatsapp"></i>1144556677
                     </p>
                 </div>
-                <div class="tarjeta-psi" data-aos="zoom-out-left" data-aos-duration="1000">
+                <div class="tarjeta-psi" data-aos="zoom-out" data-aos-duration="1000">
                     <h3>
                         Profesional Z
                     </h3>
