--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conceptos psicológicos explicados de manera clara, sin palabrebría ni tecnicismos">
+    <meta name="keywords" content="psicotopicos, topicos, psicología, ansiedad, bipolaridad, culpa,  depresion, esquizofrenia, fobia, gaslighting, hipocondria, inhibicion, libido, melancolia, neurosis, obsesion, psicosis, resiliencia, somatizacion, trauma, violencia">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -12,6 +14,9 @@
     <!--Animaciones-->
     <link rel="stylesheet" href="css/magic.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+    <!--Favicon-->
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="css/estilos.css">
     <title>Psicotópicos</title>
