--- a/pages/casos.html
+++ b/pages/casos.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conceptos psicológicos explicados de manera clara, sin palabrebría ni tecnicismos">
+    <meta name="keywords" content="psicotopicos, topicos, psicología, ansiedad, bipolaridad, culpa,  depresion, esquizofrenia, fobia, gaslighting, hipocondria, inhibicion, libido, melancolia, neurosis, obsesion, psicosis, resiliencia, somatizacion, trauma, violencia">
+    <!--Bootstrap-->
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -55,7 +58,7 @@
                             A miles de personas les da y no saben lo que tienen: Los ataques de pánico y ansiedad son más comunes de lo que crees. El problema de esto es que pueden caer en tratamientos equivocados o vivir sin el diagnóstico correcto. Hoy te hablo como un paciente más que vivió esta incómoda situación y te cuento cómo logré superarlo. Hoy, te cuento mi historia que espero que pueda ayudar al menos a una sola persona a sobrellevar este padecimiento.
                         </p>
                     </div>
-                    <article class="videos-casos">
+                    <article class="videos-casos" data-aos="flip-left" data-aos-duration="1000">
                         <iframe src="https://www.youtube.com/embed/2kUqVkYGI48" title="Así superé los Ataques de Pánico y de Ansiedad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
@@ -74,7 +77,7 @@
                             "... yo no sabía que tenía depresión, yo sabía que yo me sentí extraña. Yo siempre soy una persona muy alegre, muy amigable, de de mis amigos, de estar con mi familia, de hacer cosas diferentes, de tener muchas actividades, y yo empecé a cambiar, a sentirme totalmente diferente...""
                         </p>
                     </div>
-                    <article class="videos-casos">
+                    <article class="videos-casos" data-aos="flip-left" data-aos-duration="1000">
                         <iframe src="https://www.youtube.com/embed/yJ-gwnxWYb4" title="Hablemos de DEPRESIÓN : Sin Miedo y Sin Filtro | AZOTERAPIA PODCAST SHOW | EP07" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
@@ -93,8 +96,26 @@
                             Nos adentraremos en uno de los trastornos de los que menos se habla.
                         </p>
                     </div>
-                    <article class="videos-casos">
+                    <article class="videos-casos" data-aos="flip-left" data-aos-duration="1000">
                         <iframe src="https://www.youtube.com/embed/1jSs4Gqqw0I" title="VIVIR CON AGORAFOBIA (miedo extremo a los espacios públicos)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </article>
+                </div>
+            </div>
+            <div id="caso-obsesion">
+                <h2>
+                    Caso de Trastorno Obsesivo Compulsivo TOC
+                </h2>
+                <div class="bloques-videos">
+                    <div class="contenido-video">
+                        <h3>
+                        Aluandii explica su experiencia de vida atravesada por un TOC.
+                        </h3>
+                        <p>
+                            Aluandi define muy bien el Trastorno Obsesivo Compulsivo como la necesidad de repetir acciones específicas, por la aparición de pensamientos intrusivos que amenazan con una consecuencia terrible si no se llevan a cabo tales acciones "rituales".
+                        </p>
+                    </div>
+                    <article class="videos-casos" data-aos="flip-left" data-aos-duration="1000">
+                        <iframe  width="914" height="514" src="https://www.youtube.com/embed/8Dszaud5EkY" title="VIVIR CON TOC (TRASTORNO OBSESIVO COMPULSIVO)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </article>
                 </div>
             </div>
