--- a/pages/topicos.html
+++ b/pages/topicos.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Conceptos psicológicos explicados de manera clara, sin palabrebría ni tecnicismos">
+    <meta name="keywords" content="psicotopicos, topicos, psicología, ansiedad, bipolaridad, culpa,  depresion, esquizofrenia, fobia, gaslighting, hipocondria, inhibicion, libido, melancolia, neurosis, obsesion, psicosis, resiliencia, somatizacion, trauma, violencia">
+    <!--Bootstrap-->
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
@@ -119,7 +122,7 @@
                             Básicamente, es esa sensación de que te vas a perder en un mar
                             de preocupaciones y que no sabes cómo salir.
                         </p>
-                        <img src="../img/ansiedad.jpg" alt="ilustracion-ansiedad" />
+                        <img src="../img/ansiedad.jpg" data-aos="fade-left" alt="ilustracion-ansiedad" />
                     </article>
                     <article id="bipolaridad" class="tarjeta-topico">
                         <h3>Bipolaridad</h3>
@@ -139,7 +142,7 @@
                             Es como estar atrapado en dos mundos totalmente diferentes, con
                             la sensación de que el control se te escapa de las manos.
                         </p>
-                        <img src="../img/bipolaridad.jpg" alt="ilustracion-bipolaridad" />
+                        <img src="../img/bipolaridad.jpg" data-aos="fade-left" alt="ilustracion-bipolaridad" />
                     </article>
                     <article id="culpa" class="tarjeta-topico">
                         <h3>Culpa</h3>
@@ -153,7 +156,7 @@
                             guía para corregir errores y aprender, pero si se vuelve muy
                             intensa o constante, también puede afectar nuestra salud mental.
                         </p>
-                        <img src="../img/culpa.jpg" alt="ilustracion-culpa" />
+                        <img src="../img/culpa.jpg" data-aos="fade-left" alt="ilustracion-culpa" />
                     </article>
                     <article id="depresion" class="tarjeta-topico">
                         <h3>Depresión</h3>
@@ -167,7 +170,7 @@
                             ganas y hasta el sentido de las cosas. No es flojera ni drama:
                             es una batalla interna que no siempre se nota desde fuera.
                         </p>
-                        <img src="../img/depresion.jpg" alt="ilustracion-depresion" />
+                        <img src="../img/depresion.jpg" data-aos="fade-left" alt="ilustracion-depresion" />
                     </article>
                     <article id="esquizofrenia" class="tarjeta-topico">
                         <h3>Esquizofrenia</h3>
@@ -183,7 +186,7 @@
                             peligroso. Es más bien una condición mental compleja que afecta
                             cómo una persona piensa, siente y percibe el mundo.
                         </p>
-                        <img src="../img/esquizofrenia.jpg" alt="ilustracion-esquizofrenia" />
+                        <img src="../img/esquizofrenia.jpg" data-aos="fade-left" alt="ilustracion-esquizofrenia" />
                     </article>
                     <article id="fobia" class="tarjeta-topico">
                         <h3>Fobia</h3>
@@ -199,7 +202,7 @@
                             aunque racionalmente sabes que no lo es. Pero no por eso se
                             siente menos real.
                         </p>
-                        <img src="../img/fobia.jpg" alt="ilustracion-fobia" />
+                        <img src="../img/fobia.jpg" data-aos="fade-left" alt="ilustracion-fobia" />
                     </article>
                     <article id="gaslighting" class="tarjeta-topico">
                         <h3>Gaslighting</h3>
@@ -214,7 +217,7 @@
                             relaciones de pareja, familia, trabajo… y lo peor es que muchas
                             veces ni te das cuenta hasta que ya estás bastante metido.
                         </p>
-                        <img src="../img/gaslighting.jpg" alt="ilustracion-gaslighting" />
+                        <img src="../img/gaslighting.jpg" data-aos="fade-left" alt="ilustracion-gaslighting" />
                     </article>
                     <article id="hipocondria" class="tarjeta-topico">
                         <h3>Hipocondría</h3>
@@ -230,7 +233,7 @@
                             modo alerta constante, escaneándote el cuerpo o googleando
                             síntomas a cada rato (lo cual, spoiler: solo lo empeora).
                         </p>
-                        <img src="../img/hipocondria.jpg" alt="ilustracion-hipocondria" />
+                        <img src="../img/hipocondria.jpg" data-aos="fade-left" alt="ilustracion-hipocondria" />
                     </article>
                     <article id="inhibicion" class="tarjeta-topico">
                         <h3>Inhibición</h3>
@@ -244,7 +247,7 @@
                             cualquier momento donde hay miedo al rechazo, al error o a
                             exponerse. No es que no puedas, es que te bloqueás.
                         </p>
-                        <img src="../img/inhibicion.jpg" alt="ilustracion-inhibicion" />
+                        <img src="../img/inhibicion.jpg" data-aos="fade-left" alt="ilustracion-inhibicion" />
                     </article>
                     <article id="libido" class="tarjeta-topico">
                         <h3>Libido</h3>
@@ -259,7 +262,7 @@
                             ejemplo, decía que la líbido era como la fuerza vital que movía
                             casi todo lo que hacemos (no solo sexo).
                         </p>
-                        <img src="../img/libido.jpg" alt="ilustracion-libido" />
+                        <img src="../img/libido.jpg" data-aos="fade-left" alt="ilustracion-libido" />
                     </article>
                     <article id="melancolia" class="tarjeta-topico">
                         <h3>Melancolía</h3>
@@ -278,7 +281,7 @@
                             presente, y te mete en un círculo de pensamientos que no te
                             dejan avanzar.
                         </p>
-                        <img src="../img/melancolia.jpg" alt="ilustracion-melancolia" />
+                        <img src="../img/melancolia.jpg" data-aos="fade-left" alt="ilustracion-melancolia" />
                     </article>
                     <article id="neurosis" class="tarjeta-topico">
                         <h3>Neurosis</h3>
@@ -294,7 +297,7 @@
                             borde de la angustia sin saber muy bien por qué. Es más como una
                             lucha interna constante.
                         </p>
-                        <img src="../img/neurosis.jpg" alt="ilustracion-neurosis" />
+                        <img src="../img/neurosis.jpg" data-aos="fade-left" alt="ilustracion-neurosis"/>
                     </article>
                     <article id="obsesion" class="tarjeta-topico">
                         <h3>Obsesión</h3>
@@ -314,7 +317,7 @@
                             (obsesiones) te llevan a realizar ciertos rituales o acciones
                             (compulsiones), aunque muchas veces sabes que no tienen sentido.
                         </p>
-                        <img src="../img/obsesion.jpg" alt="ilustracion-obsesion" />
+                        <img src="../img/obsesion.jpg" data-aos="fade-left" alt="ilustracion-obsesion"/>
                     </article>
                     <article id="psicosis" class="tarjeta-topico">
                         <h3>Psicosis</h3>
@@ -331,7 +334,7 @@
                             normales en muchos momentos, pero la desconexión con la realidad
                             es lo que marca la diferencia.
                         </p>
-                        <img src="../img/psicosis.jpg" alt="ilustracion-psicosis" />
+                        <img src="../img/psicosis.jpg" data-aos="fade-left" alt="ilustracion-psicosis"/>
                     </article>
                     <article id="resiliencia" class="tarjeta-topico">
                         <h3>Resiliencia</h3>
@@ -348,7 +351,7 @@
                             Es algo que todos tenemos, solo que a veces hay que "entrenarlo"
                             para que salga en su mejor versión cuando más lo necesitas.
                         </p>
-                        <img src="../img/resiliencia.jpg" alt="ilustracion-resiliencia" />
+                        <img src="../img/resiliencia.jpg" data-aos="fade-left" alt="ilustracion-resiliencia"/>
                     </article>
                     <article id="somatizacion" class="tarjeta-topico">
                         <h3>Somatización</h3>
@@ -365,7 +368,7 @@
                             manejar esto emocionalmente, entonces te lo voy a mostrar
                             físicamente."
                         </p>
-                        <img src="../img/somatizacion.jpg" alt="ilustracion-somatizacion" />
+                        <img src="../img/somatizacion.jpg" data-aos="fade-left" alt="ilustracion-somatizacion"/>
                     </article>
                     <article id="trauma" class="tarjeta-topico">
                         <h3>Trauma</h3>
@@ -383,7 +386,7 @@
                             cómo te relacionas con los demás o incluso cómo te sientes
                             contigo mismo.
                         </p>
-                        <img src="../img/trauma.jpg" alt="ilustracion-trauma" />
+                        <img src="../img/trauma.jpg" data-aos="fade-left" alt="ilustracion-trauma"/>
                     </article>
                     <article id="violencia" class="tarjeta-topico">
                         <h3>Violencia Psicológica</h3>
@@ -403,7 +406,7 @@
                             si nunca pudieras hacer las cosas bien. Reconocerla es el primer
                             paso para salir de una relación tóxica y buscar apoyo.
                         </p>
-                        <img src="../img/violencia.jpg" alt="ilustracion-violencia" />
+                        <img src="../img/violencia.jpg" data-aos="fade-left" alt="ilustracion-violencia"/>
                     </article>
                 </div>
             </div>
